wtdemo-mainchart/dev/templates/liquibase/phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotation:
    argocd.argoproj.io/sync-wave: "-2"        
  name: phpmyadmin
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32000
  selector:
    app: phpmyadmin
